--- a/index.html
+++ b/index.html
@@ -4,215 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiny Video Player</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: transparent;
-            overflow: hidden;
-            font-family: Arial, sans-serif;
-        }
-
-        .window {
-            position: absolute;
-            top: 50px;
-            left: 50px;
-            width: 300px;
-            height: 200px;
-            background-color: rgba(40, 40, 40, 0.9);
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-            color: #ffffff;
-            overflow: hidden;
-            resize: both;
-            opacity: 1; /* Default opacity */
-            transition: opacity 0.3s ease;
-        }
-
-        .title-bar {
-            width: 100%;
-            height: 30px;
-            background-color: rgba(30, 30, 30, 0.9);
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
-            cursor: move;
-            display: flex;
-            align-items: center;
-            padding-left: 10px;
-            user-select: none;
-        }
-
-        .text-area {
-            width: calc(100% - 20px);
-            height: calc(100% - 40px);
-            margin: 10px;
-            background-color: transparent;
-            border: none;
-            color: #ffffff;
-            font-size: 14px;
-            resize: none;
-            outline: none;
-        }
-
-        .text-area::placeholder {
-            color: #888;
-        }
-
-        .video-player-container {
-            width: calc(100% - 20px);
-            height: calc(100% - 40px);
-            margin: 10px;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .video-input-container {
-            display: flex;
-            gap: 10px;
-            align-items: center;
-        }
-
-        .video-input-container input {
-            flex: 1;
-            padding: 5px;
-            background-color: rgba(50, 50, 50, 0.9);
-            border: none;
-            color: #ffffff;
-            border-radius: 5px;
-        }
-
-        .video-input-container button {
-            padding: 5px 10px;
-            background-color: rgba(40, 40, 40, 0.9);
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 14px;
-            opacity: 0.7;
-            transition: opacity 0.3s ease;
-        }
-
-        .video-input-container button:hover {
-            opacity: 1;
-        }
-
-        #videoPlayer {
-            flex-grow: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-        }
-
-        #videoPlayer iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-            border-radius: 5px;
-        }
-
-        .settings-button {
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            background-color: rgba(30, 30, 30, 0.9);
-            color: #ffffff;
-            border: none;
-            border-radius: 50%;
-            width: 30px;
-            height: 30px;
-            cursor: pointer;
-            font-size: 16px;
-            opacity: 0.7;
-            transition: opacity 0.3s ease;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .settings-button:hover {
-            opacity: 1;
-        }
-
-        .settings-panel {
-            position: fixed;
-            top: 50px;
-            right: 10px;
-            width: 200px;
-            background-color: rgba(30, 30, 30, 0.9);
-            border-radius: 10px;
-            padding: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-            display: none; /* Hidden by default */
-        }
-
-        .settings-panel .slider-container {
-            margin-bottom: 10px;
-        }
-
-        .settings-panel .slider {
-            width: 100%;
-        }
-
-        .settings-panel .toggle-button {
-            width: 100%;
-            padding: 5px;
-            background-color: rgba(40, 40, 40, 0.9);
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 14px;
-            opacity: 0.7;
-            transition: opacity 0.3s ease;
-        }
-
-        .settings-panel .toggle-button:hover {
-            opacity: 1;
-        }
-
-        .timer-controls {
-            display: flex;
-            gap: 10px;
-            margin-top: 10px;
-            justify-content: center;
-        }
-
-        .timer-controls button {
-            padding: 5px 10px;
-            background-color: rgba(40, 40, 40, 0.9);
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 14px;
-            opacity: 0.7;
-            transition: opacity 0.3s ease;
-        }
-
-        .timer-controls button:hover {
-            opacity: 1;
-        }
-
-        #timerDisplay {
-            text-align: center;
-            margin-top: 10px;
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        /* Footer text */
-        .footer-text {
-            position: fixed;
-            bottom: 10px;
-            left: 10px;
-            font-size: 12px;
-            color: #888;
-            user-select: none;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Settings Button (Gear Icon) -->
@@ -275,273 +67,6 @@
     <!-- Footer Text -->
     <div class="footer-text">Made by SirPro (totally not using chat-gpt :heh:)</div>
 
-    <script>
-        const notesWindow = document.getElementById('notesWindow');
-        const notesTitleBar = document.getElementById('notesTitleBar');
-        const notesTextArea = document.getElementById('notesTextArea');
-        const settingsButton = document.getElementById('settingsButton');
-        const settingsPanel = document.getElementById('settingsPanel');
-        const slider = document.getElementById('slider');
-        const toggleNotesButton = document.getElementById('toggleNotesButton');
-        const toggleTimerButton = document.getElementById('toggleTimerButton');
-        const toggleVideoPlayerButton = document.getElementById('toggleVideoPlayerButton');
-
-        const videoPlayerWindow = document.getElementById('videoPlayerWindow');
-        const videoPlayerTitleBar = document.getElementById('videoPlayerTitleBar');
-        const videoUrlInput = document.getElementById('videoUrl');
-        const runVideoButton = document.getElementById('runVideoButton');
-        const videoPlayer = document.getElementById('videoPlayer');
-
-        const timerWindow = document.getElementById('timerWindow');
-        const timerTitleBar = document.getElementById('timerTitleBar');
-        const add1Minute = document.getElementById('add1Minute');
-        const add5Minutes = document.getElementById('add5Minutes');
-        const add10Minutes = document.getElementById('add10Minutes');
-        const timerDisplay = document.getElementById('timerDisplay');
-        const startTimerButton = document.getElementById('startTimerButton');
-        const pauseTimerButton = document.getElementById('pauseTimerButton');
-        const stopTimerButton = document.getElementById('stopTimerButton');
-        const resetTimerButton = document.getElementById('resetTimerButton');
-
-        let isDraggingNotes = false;
-        let isDraggingVideoPlayer = false;
-        let isDraggingTimer = false;
-        let offsetX, offsetY;
-
-        let timerInterval;
-        let timeRemaining = 0;
-        let isPaused = false;
-
-        // Make the Notes Window draggable
-        notesTitleBar.addEventListener('mousedown', (e) => {
-            isDraggingNotes = true;
-            offsetX = e.clientX - notesWindow.getBoundingClientRect().left;
-            offsetY = e.clientY - notesWindow.getBoundingClientRect().top;
-        });
-
-        // Make the Video Player Window draggable
-        videoPlayerTitleBar.addEventListener('mousedown', (e) => {
-            isDraggingVideoPlayer = true;
-            offsetX = e.clientX - videoPlayerWindow.getBoundingClientRect().left;
-            offsetY = e.clientY - videoPlayerWindow.getBoundingClientRect().top;
-        });
-
-        // Make the Timer Window draggable
-        timerTitleBar.addEventListener('mousedown', (e) => {
-            isDraggingTimer = true;
-            offsetX = e.clientX - timerWindow.getBoundingClientRect().left;
-            offsetY = e.clientY - timerWindow.getBoundingClientRect().top;
-        });
-
-        document.addEventListener('mousemove', (e) => {
-            if (isDraggingNotes) {
-                notesWindow.style.left = `${e.clientX - offsetX}px`;
-                notesWindow.style.top = `${e.clientY - offsetY}px`;
-            }
-            if (isDraggingVideoPlayer) {
-                videoPlayerWindow.style.left = `${e.clientX - offsetX}px`;
-                videoPlayerWindow.style.top = `${e.clientY - offsetY}px`;
-            }
-            if (isDraggingTimer) {
-                timerWindow.style.left = `${e.clientX - offsetX}px`;
-                timerWindow.style.top = `${e.clientY - offsetY}px`;
-            }
-        });
-
-        document.addEventListener('mouseup', () => {
-            isDraggingNotes = false;
-            isDraggingVideoPlayer = false;
-            isDraggingTimer = false;
-        });
-
-        // Toggle settings panel visibility
-        settingsButton.addEventListener('click', () => {
-            if (settingsPanel.style.display === 'none' || settingsPanel.style.display === '') {
-                settingsPanel.style.display = 'block';
-            } else {
-                settingsPanel.style.display = 'none';
-            }
-        });
-
-        // Control all windows' transparency using the slider
-        slider.addEventListener('input', () => {
-            const opacity = slider.value;
-            notesWindow.style.opacity = opacity;
-            videoPlayerWindow.style.opacity = opacity;
-            timerWindow.style.opacity = opacity;
-        });
-
-        // Toggle Notes Window visibility
-        toggleNotesButton.addEventListener('click', () => {
-            if (notesWindow.style.display === 'none') {
-                notesWindow.style.display = 'block';
-                toggleNotesButton.textContent = 'Hide Notes';
-            } else {
-                notesWindow.style.display = 'none';
-                toggleNotesButton.textContent = 'Show Notes';
-            }
-        });
-
-        // Toggle Timer Window visibility
-        toggleTimerButton.addEventListener('click', () => {
-            if (timerWindow.style.display === 'none') {
-                timerWindow.style.display = 'block';
-                toggleTimerButton.textContent = 'Hide Timer';
-            } else {
-                timerWindow.style.display = 'none';
-                toggleTimerButton.textContent = 'Show Timer';
-            }
-        });
-
-        // Toggle Video Player Window visibility
-        toggleVideoPlayerButton.addEventListener('click', () => {
-            if (videoPlayerWindow.style.display === 'none') {
-                videoPlayerWindow.style.display = 'block';
-                toggleVideoPlayerButton.textContent = 'Hide Video Player';
-            } else {
-                videoPlayerWindow.style.display = 'none';
-                toggleVideoPlayerButton.textContent = 'Show Video Player';
-            }
-        });
-
-        // Timer functionality (unchanged)
-        add1Minute.addEventListener('click', () => addTime(1));
-        add5Minutes.addEventListener('click', () => addTime(5));
-        add10Minutes.addEventListener('click', () => addTime(10));
-
-        startTimerButton.addEventListener('click', startTimer);
-        pauseTimerButton.addEventListener('click', pauseTimer);
-        stopTimerButton.addEventListener('click', stopTimer);
-        resetTimerButton.addEventListener('click', resetTimer);
-
-        function addTime(minutes) {
-            timeRemaining += minutes * 60;
-            updateTimerDisplay();
-            if (!timerInterval && !isPaused) {
-                startTimer();
-            }
-        }
-
-        function startTimer() {
-            if (timeRemaining <= 0) return;
-            clearInterval(timerInterval);
-            timerInterval = setInterval(() => {
-                if (timeRemaining <= 0) {
-                    clearInterval(timerInterval);
-                    alert("Time's up!");
-                    timerDisplay.textContent = "00:00";
-                    resetButtons();
-                    return;
-                }
-                timeRemaining--;
-                updateTimerDisplay();
-            }, 1000);
-            startTimerButton.disabled = true;
-            pauseTimerButton.disabled = false;
-            stopTimerButton.disabled = false;
-            isPaused = false;
-        }
-
-        function pauseTimer() {
-            clearInterval(timerInterval);
-            startTimerButton.disabled = false;
-            pauseTimerButton.disabled = true;
-            stopTimerButton.disabled = false;
-            isPaused = true;
-        }
-
-        function stopTimer() {
-            clearInterval(timerInterval);
-            timeRemaining = 0;
-            updateTimerDisplay();
-            resetButtons();
-        }
-
-        function resetTimer() {
-            clearInterval(timerInterval);
-            timeRemaining = 0;
-            updateTimerDisplay();
-            resetButtons();
-        }
-
-        function resetButtons() {
-            startTimerButton.disabled = false;
-            pauseTimerButton.disabled = true;
-            stopTimerButton.disabled = true;
-            isPaused = false;
-        }
-
-        function updateTimerDisplay() {
-            const minutes = Math.floor(timeRemaining / 60);
-            const seconds = timeRemaining % 60;
-            timerDisplay.textContent = `${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
-        }
-
-        // Video Player functionality
-        runVideoButton.addEventListener('click', () => {
-            const url = videoUrlInput.value.trim();
-            if (!url) {
-                alert("Please paste a valid YouTube, Twitch, or Kick URL.");
-                return;
-            }
-
-            let embedUrl = null;
-
-            if (url.includes("youtube.com") || url.includes("youtu.be")) {
-                const videoId = extractYouTubeVideoId(url);
-                if (!videoId) {
-                    alert("Invalid YouTube URL.");
-                    return;
-                }
-                embedUrl = `https://www.youtube.com/embed/${videoId}?autoplay=1`;
-            } else if (url.includes("twitch.tv")) {
-                const channelName = extractTwitchChannelName(url);
-                if (!channelName) {
-                    alert("Invalid Twitch URL.");
-                    return;
-                }
-                embedUrl = `https://player.twitch.tv/?channel=${channelName}&parent=${window.location.hostname}&autoplay=true`;
-            } else if (url.includes("kick.com")) {
-                const channelName = extractKickChannelName(url);
-                if (!channelName) {
-                    alert("Invalid Kick URL.");
-                    return;
-                }
-                embedUrl = `https://player.kick.com/${channelName}?autoplay=true`;
-            } else {
-                alert("Unsupported platform. Please use YouTube, Twitch, or Kick.");
-                return;
-            }
-
-            videoPlayer.innerHTML = `
-                <iframe
-                    width="100%"
-                    height="100%"
-                    src="${embedUrl}"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
-                </iframe>
-            `;
-        });
-
-        function extractYouTubeVideoId(url) {
-            const regex = /(?:https?:\/\/)?(?:www\.)?(?:youtube\.com\/(?:[^\/\n\s]+\/\S+\/|(?:v|e(?:mbed)?)\/|\S*?[?&]v=)|youtu\.be\/)([a-zA-Z0-9_-]{11})/;
-            const match = url.match(regex);
-            return match ? match[1] : null;
-        }
-
-        function extractTwitchChannelName(url) {
-            const regex = /(?:https?:\/\/)?(?:www\.)?twitch\.tv\/([a-zA-Z0-9_]+)/;
-            const match = url.match(regex);
-            return match ? match[1] : null;
-        }
-
-        function extractKickChannelName(url) {
-            const regex = /(?:https?:\/\/)?(?:www\.)?kick\.com\/([a-zA-Z0-9_]+)/;
-            const match = url.match(regex);
-            return match ? match[1] : null;
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
