--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <button class="toggle-button" id="toggleNotesButton">Show Notes</button>
         <button class="toggle-button" id="toggleTimerButton">Show Timer</button>
         <button class="toggle-button" id="toggleVideoPlayerButton">Hide Video Player</button>
+        <button class="toggle-button" id="watchingModeButton">Watching Mode</button>
+        <button class="toggle-button" id="superSecretButton" style="display: none;">Super Secret Button</button>
     </div>
 
     <!-- Notes Window (Hidden by Default) -->
