--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.25);
             resize: both;
-            overflow: auto;
+            overflow: hidden; /* Prevent scrollbars */
             min-width: 200px;
             min-height: 150px;
             backdrop-filter: blur(8px);
@@ -76,12 +76,14 @@
             height: calc(100% - 40px);
             display: flex;
             flex-direction: column;
+            overflow: hidden; /* Prevent scrollbars */
         }
 
         #videoPlayer {
             flex: 1;
             border: none;
             border-radius: 4px;
+            overflow: hidden; /* Prevent scrollbars */
         }
 
         /* Notes Window */
@@ -170,39 +172,6 @@
             transform: rotate(180deg) scale(1.1);
         }
 
-        /* Transparency Controls */
-        .transparency-controls {
-            position: fixed;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: var(--dark-bg);
-            border: 1px solid var(--dark-border);
-            border-radius: 8px;
-            padding: 10px 15px;
-            backdrop-filter: blur(8px);
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .slider {
-            width: 120px;
-            height: 4px;
-            border-radius: 2px;
-            background: rgba(255, 255, 255, 0.1);
-            -webkit-appearance: none;
-        }
-
-        .slider::-webkit-slider-thumb {
-            -webkit-appearance: none;
-            width: 16px;
-            height: 16px;
-            border-radius: 50%;
-            background: var(--accent);
-            cursor: pointer;
-        }
-
         /* Settings Panel */
         .settings-panel {
             position: fixed;
@@ -221,6 +190,33 @@
             display: flex;
             flex-direction: column;
             gap: 8px;
+        }
+
+        .slider-container {
+            margin-bottom: 15px;
+        }
+
+        .slider-container label {
+            display: block;
+            margin-bottom: 8px;
+            font-size: 0.9em;
+        }
+
+        .slider {
+            width: 100%;
+            height: 4px;
+            border-radius: 2px;
+            background: rgba(255, 255, 255, 0.1);
+            -webkit-appearance: none;
+        }
+
+        .slider::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            background: var(--accent);
+            cursor: pointer;
         }
 
         .toggle-button {
@@ -268,12 +264,6 @@
     </style>
 </head>
 <body>
-    <!-- Transparency Controls -->
-    <div class="transparency-controls">
-        <label>Window Transparency</label>
-        <input type="range" min="0" max="1" value="1" step="0.01" class="slider" id="transparencySlider">
-    </div>
-
     <!-- Settings Button -->
     <button class="settings-button" id="settingsButton">
         <svg viewBox="0 0 24 24" width="24" height="24">
@@ -283,6 +273,10 @@
 
     <!-- Settings Panel -->
     <div class="settings-panel" id="settingsPanel">
+        <div class="slider-container">
+            <label>Window Transparency</label>
+            <input type="range" min="0" max="1" value="1" step="0.01" class="slider" id="transparencySlider">
+        </div>
         <div class="settings-buttons">
             <button class="toggle-button" id="toggleNotes">Toggle Notes</button>
             <button class="toggle-button" id="toggleTimer">Toggle Timer</button>
