--- a/index.html
+++ b/index.html
@@ -228,35 +228,46 @@
       background: #555;
     }
 
-    /* New CSS for Watching Mode */
-    .watching-mode .window-header,
-    .watching-mode .video-controls {
-      display: none;
+    /* New CSS for Volume Slider */
+    .volume-controls {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      margin-top: 10px;
     }
 
-    .watching-mode .window-content {
-      padding: 0;
-      height: 100%;
+    .volume-slider {
+      width: 100px;
     }
 
-    .watching-mode iframe {
-      height: 100%;
+    .volume-slider::-webkit-slider-runnable-track {
+      background: #444;
+      height: 4px;
+      border-radius: 2px;
     }
 
-    /* Super Secret Window Styles */
-    .secret-window {
-      width: 800px; /* 200% larger */
-      height: 600px; /* 200% larger */
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%); /* Center the window */
-      position: fixed;
-      z-index: 1000;
+    .volume-slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 12px;
+      height: 12px;
+      background: #fff;
+      border-radius: 50%;
+      cursor: pointer;
     }
 
-    .secret-window iframe {
-      width: 100%;
-      height: 100%;
+    .volume-slider::-moz-range-track {
+      background: #444;
+      height: 4px;
+      border-radius: 2px;
+    }
+
+    .volume-slider::-moz-range-thumb {
+      width: 12px;
+      height: 12px;
+      background: #fff;
+      border-radius: 50%;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -305,6 +316,11 @@
         <button id="load-video">▶️</button>
       </div>
       <iframe id="video-frame" src="" allowfullscreen></iframe>
+      <!-- Volume Controls -->
+      <div class="volume-controls" id="volume-controls" style="display: none;">
+        <input type="range" class="volume-slider" id="volume-slider" min="0" max="1" step="0.1" value="1">
+        <button id="mute-button">🔊</button>
+      </div>
     </div>
   </div>
 
@@ -431,6 +447,7 @@
     document.getElementById('load-video').addEventListener('click', () => {
       const url = document.getElementById('video-url').value.trim();
       const videoFrame = document.getElementById('video-frame');
+      const volumeControls = document.getElementById('volume-controls');
 
       if (url) {
         // Check for YouTube URLs
@@ -438,6 +455,7 @@
           const videoId = extractYouTubeVideoId(url);
           if (videoId) {
             videoFrame.src = `https://www.youtube.com/embed/${videoId}`;
+            volumeControls.style.display = 'none'; // Hide volume controls for YouTube
           } else {
             alert('Invalid YouTube URL. Please enter a valid YouTube link.');
           }
@@ -447,6 +465,7 @@
           const embedUrl = getTwitchEmbedUrl(url);
           if (embedUrl) {
             videoFrame.src = embedUrl;
+            volumeControls.style.display = 'none'; // Hide volume controls for Twitch
           } else {
             alert('Invalid Twitch URL. Please enter a valid Twitch channel, video, or clip URL.');
           }
@@ -456,6 +475,7 @@
           const embedUrl = getKickEmbedUrl(url);
           if (embedUrl) {
             videoFrame.src = embedUrl;
+            volumeControls.style.display = 'flex'; // Show volume controls for Kick
           } else {
             alert('Invalid Kick URL. Please enter a valid Kick channel URL.');
           }
@@ -463,7 +483,35 @@
         // Handle other URLs
         else {
           videoFrame.src = url;
+          volumeControls.style.display = 'none'; // Hide volume controls for other URLs
         }
+      }
+    });
+
+    // Volume Controls for Kick
+    const volumeSlider = document.getElementById('volume-slider');
+    const muteButton = document.getElementById('mute-button');
+    let isMuted = false;
+
+    volumeSlider.addEventListener('input', (e) => {
+      const videoFrame = document.getElementById('video-frame');
+      const volume = e.target.value;
+      videoFrame.volume = volume; // Set volume for the iframe
+      if (isMuted && volume > 0) {
+        isMuted = false;
+        muteButton.textContent = '🔊';
+      }
+    });
+
+    muteButton.addEventListener('click', () => {
+      const videoFrame = document.getElementById('video-frame');
+      isMuted = !isMuted;
+      if (isMuted) {
+        videoFrame.volume = 0; // Mute the iframe
+        muteButton.textContent = '🔇';
+      } else {
+        videoFrame.volume = volumeSlider.value; // Unmute the iframe
+        muteButton.textContent = '🔊';
       }
     });
 
